trying to solve reroute